--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -9,7 +9,8 @@ layout: post
 categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
--   [Research Questions - Feb 2023](#research-questions---feb-2023)
+
+-   [Research Questions - Feb 2024](#research-questions---feb-2024)
 -   [Notes to restructure](#notes-to-restructure)
     -   [Chapter outline](#chapter-outline)
     -   [On GDP as a germ-cell and unit of analysis - and chapter
@@ -29,6 +30,9 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
         tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
     -   [GDPs used to scaffold ideation
         processes](#gdps-used-to-scaffold-ideation-processes)
+        -   [Problem solving practices as a fund of knowledge (but not
+            really
+            GDP)](#problem-solving-practices-as-a-fund-of-knowledge-but-not-really-gdp)
         -   [Paper prototyping mapping visual
             matrix](#paper-prototyping-mapping-visual-matrix)
         -   [GDPs as used by participants in their prioritisation in the
@@ -54,6 +58,14 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
 -   [Cultural Dimension](#cultural-dimension)
     -   [The role of GDPs to facilitate learners to design for
         others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
+        -   [Referring to GDPs (especially during playtesting) can help
+            scaffold the process of imagining the end user
+            experiences.](#referring-to-gdps-especially-during-playtesting-can-help-scaffold-the-process-of-imagining-the-end-user-experiences.)
+        -   [GDPs, the scale/nature of project goals & designing for
+            others](#gdps-the-scalenature-of-project-goals-designing-for-others)
+        -   [Other examples and interpretation on designing for others /
+            shifts of
+            perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
     -   [Role of playtesting and feedback and
         GDPs](#role-of-playtesting-and-feedback-and-gdps)
         -   [GDP concepts and language used in informal feedback for
@@ -61,11 +73,14 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
             games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
         -   [The propagation of use of GDPs through
             playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
+        -   [New GDPs emerged from existing patterns through peer
+            activity during
+            playtesting](#new-gdps-emerged-from-existing-patterns-through-peer-activity-during-playtesting)
     -   [GDPs facilitate the use of wider funds of
         knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
-        -   [Problem solving practices as a fund of knowledge (but not
-            really
-            GDP)](#problem-solving-practices-as-a-fund-of-knowledge-but-not-really-gdp)
+        -   [Family funds of knowledge](#family-funds-of-knowledge)
+        -   [Professional funds of
+            knowledge](#professional-funds-of-knowledge)
 -   [Discussion on the use of game design patterns in the 3M learning
     design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
     -   [Discussion on GDPs, emerging processes and learner
@@ -78,6 +93,7 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
     -   [Discussion on the use of design patterns and pattern
         catalogues - MERGE WITH THE SECTION
         ABOVE](#discussion-on-the-use-of-design-patterns-and-pattern-catalogues---merge-with-the-section-above)
+
 
 ## Research Questions - Feb 2024
 
@@ -525,6 +541,74 @@ The design chapter explored the tension between reduced choice of genre of game.
 
 <!-- The reduction on the length of the course was welcome show by Ma's comment. "It did go on for too long." -->
 
+
+#### Problem solving practices as a fund of knowledge (but not really GDP)
+
+In the following example home funds of knowledge are utilised not only in terms of home experiences of games but also in terms of design and problem solving practices. Dave  and Toby are working closely as a pair.
+
+Dave  invites thinking outside of the constraints of the suggested design early in this first session. The following interaction shows a rich interchange where the parent is trying to draw on the game playing experiences to promote innovation in the design of the existing template.
+
+
+
+<!-- THIS IS STRONGLY LINKED WITH IDEATION - PERHAPS MOVE THERE. -->
+
+    Dave: Have you thought about pushing it a bit further and have a different style of game?
+    Toby: What do you mean?
+    Dave: Well the previous style of game was a platform (makes shape with hands) game wasn’t it? You went along and there was gravity pushing down (points down). There are other types of games aren’t there?
+    Toby: Pause. I don’t know what to do thought.
+    Dave: Well quite but what other games are there? again
+
+Thus in this example the family bring their knowledge of game play patterns and genre conventions and more broadly experience and a perspective of coding as a creative challenge to the activity.
+
+
+
+
+<!--
+The following exchange shows how the use of GDPs help participants navigate the professional practice of forking a codebase and the exploration of developer resources. Technically, he has the courage to divert from the existing game paradigm from platform to maze. Practically it brings up issues as many of the dominant game design patterns are different. Thus the first one they identify that of enemy following is not present in the current menu of choices.
+
+THIS IS  LINKED WITH discuSSION - PERHAPS MOVE THERE.
+
+
+
+Toby adopts with this suggestion readily once he understands Da's suggestion. He then approaches Mick with a suggestion.
+
+    Toby: You could have a game where every 15 seconds 10 seconds you could add and enemy to such and such a random number between such and such (holds up hands to indicate parameters). You could block it somewhere.
+    Dave: So instead of.. instead of the world… the world being sideways. We could have the world being looked down on. (reindicates the change of perspective)
+    Toby: Hmm. How should I do this then?
+    Dave: That’s a good question. Shall we ask Mick to see if that would mess things up or not?
+    Toby: Mick
+    Mick: Hi ya.
+    Toby: Erm. Thinking about what game to do . I was thinking can we make like a Pac-man game kind of thing (indicates movement of character with hands)
+    Dave: If we had an on the top game rather than a platform game
+    Mick: I think it could work. You could kind of adapt that game by, kind of, removing gravity.
+    Dave: and see what happens?
+    Mick: and see what happens.
+
+
+LOA FROM COMPUTING PEDAGOGY RELEVANT HERE - WHERE ELSE ARE THEY EXPLORED?
+
+Dave  expresses his desire to for the pair to try something new by implementing a pattern not in the menu of GDPs provided. Their new choice is a change of perspective which involves a new game pattern of a new movement game mechanic. The specific proposal is to remove a jumping game mechanic and using a 2D top down movement mechanic used in maze and adventure games (e.g. Pac-man and Zelda games).
+
+Toby takes on the role of checking these change of direction with me. He uses a concrete example of a game to indicate the shift of genre and games space structure implied, saying "I was thinking can we make like a pacman game kind of thing". Dave  is more explicit naming the shift of perspective and genre. Mick takes this to a concrete code level by making reference to a key change of code that would be involved.
+
+The decision to divert from the existing meny of GDPs and genre can be triangulated with interview data from Dave  on the motivation behind his involvement in volunteering at Coder Dojos.
+
+PERHAPS DROP THIS QUOTE OR WORK OUT HOW TO BETTER INTEGRATE IT?
+
+    Honestly, it's just it's just my hobby and I love it is the main reason. In fact, it's probably the only reason. If I can, if I can persuade / cajole / trick my kids into being involved at the same time, then that's even better. Personally, I think that's about it. I've always been interested in computers. I love, I love, I love programming. I'm no good at pencils and pens drawing or anything like that. But writing software is the closest I get to a creative outlet. So I just love doing that.
+
+Given this additional perspective, I interpret Da's influence to divert as a way of embracing a creative challenge and bringing his child along for the ride. However, Dave  is also aware of potential challenges of straying too far from the template. He does not want to "mess things up".
+
+A BIT ON FORKING ISSUES - TO EXPLORE LATER MOVE BELOW TO DISCUSSION?
+
+This tension has a parallel to a professional practice of "forking" code-bases in open-source code communities. The practice of forking can involve taking a code base in a new direction and the benefits of adaption may be out-weighed by disadvantages including the friction involved in splitting an existing community and duplication of effort. The parent checking with a Mick a guiding community member about the advantages and disadvantages of a major fork in the code structure mirrors this professional tension.
+
+This example shows that while the use of GDP can help support choices within a frame, there is also the ability to break out of that restriction and keep some of the benefits of the shared code base.
+
+My own positive response to their suggestion was driven partly from knowledge of Da's cultural background a both a professional coding and a volunteer supporting children's coding programmes. While simultaneously checking with other groups that they use the starting template as a base, to avoid overload as previously discussed in design decisions, I encourage this pair to see what happens as a potential learning opportunity. I am conscious that the change of movement may open up different possibilities for new game patterns that this pair may be able to solve. This outweighs the possibility that the pair will get bogged down in complex code problems or structures which may be beyond the capacity of the young person. After all even if they encounter father must solve, the apprentice does not need to understand everything in order to benefit from observing the master at work.
+ -->
+
+
 #### Paper prototyping mapping visual matrix
 
 NOTE - PERHAPS MOVE THIS TO PREVIOUS CHAPTER / METHODS? NOT GDP SPECIFIC? OR PART OF STARTING DESIGN
@@ -579,6 +663,7 @@ Another pair's ideation helped by the use of a GDPs is the following example whi
     Toby: I’ll leave a hole there.
 
 As aligned with the learning design principle of rapid feedback, changes in the code which Toby is altering to impact on the new design pattern of a top down game, are immediately apparent in the preview window. As such, Toby does not feel the need to prototype on paper.
+
 
 **Other examples of GPDs helping the ideation process**
 
@@ -1071,7 +1156,7 @@ May need a way to differential this chapters discussion of GDP - and that of the
 <!-- NOTE - ALSO LINKED TO IDEATION? - is this guided participation? -->
 
 
-**Referring to GDPs (especially during playtesting) can help scaffold the process of imagining the end user experiences.**
+#### Referring to GDPs (especially during playtesting) can help scaffold the process of imagining the end user experiences.
 
 As explored previously, playtesing as a regular practice can shift learners to a perspective of designing for others. This section examines how some GDPs  provoked participants to imagine the experience of end users of their game. Game design patterns focused on gameplay rather than code structure focus on recognisable behaviour. Thus in the same way that visually organised code can aid ideation, designing code framework to help participants alter on a noticeable change in game play can foreground key GDPs.
 
@@ -1101,7 +1186,7 @@ In the starting vignette of the chapter Olivia and Suzanna come into conflict ov
     Olivia: Good! (laughs)
     Olivia: It’s a secret, special one. (...) If people tried hard they would get to my level. -->
 
-Th comments that she wants players to be frustrated when playing the game and that this is a contrast to final level which has only rewards and no hazards. This being a "secret, special experience" which plays against the norms of platform game design, thus provoking player surprise and fun. She notes the persistence of the student helper who pushes past her frustration to complete the game. Suzanna remark "If people tried hard they would get to my level" shows her awareness of that not all players will persist in the same way.
+Th comments that she wants players to be frustrated when playing the game and that this is a contrast to final level which has only rewards and no hazards. This being a "secret, special" experience which plays against the norms of platform game design, thus provoking player surprise and fun. She notes the persistence of the student helper who pushes past her frustration to complete the game. Suzanna remark "If people tried hard they would get to my level" shows her awareness of that not all players will persist in the same way.
 
 <!-- #### Other examples and interpretation on designing for others / shifts of perspective
 In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations of additions.
@@ -1112,12 +1197,15 @@ Find other examples... -->
 <!-- There are different levels of designing for others
 One is just to make a playable game experience which by design involves an imagined user experience in the abstract. The example above shows a more playful and direct imagining of the experience of other people in the room a more tangible motivation with a more immediate reward. -->
 
+THIS SEEMS RELATIVELY WEAK AND PERHAPS A GOOD STRAND TO DROP
 A common proposal of research on professional and participatory design processes is that that ideation is more productive when informed by a realistic sense of the end user experience. (explored in Lit Review) The examples show different forms of designing for others. One is to imagine a user experience and make a playable game in the abstract which matches the mother's approach. Th's playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
 
 <!-- NOTE - ANY EVIDENCE FOR THIS BASED ON INTENTIONAL DESIGN OR IS THIS JUST AN OBSERVATION OF ORGANIC BEHAVIOUR?
 Designing for others - as a key per.spective in constructionism.
 Note: What added insights or tips for practitioners can I bring here?
 NOTE - cf Resnick Designing for Tinkerability - and the concepts in that.  -->
+
+####  GDPs, the scale/nature of project goals & designing for others
 
 **GDPs aid the overall process of design for others by providing discreet and clear goals which are nested in the wider goal of making an engaging game.** - is this feedback cultural or guided participation - discuss?
 
@@ -1128,7 +1216,7 @@ This process involves shifts in perspectives from participants as they engaging 
 <!-- We have explored in the literature review the value of design as a process, to see surrounding world as a designed experience [@ratto_critical_2011].
 AND SO? -->
 
-**Other examples and interpretation on designing for others / shifts of perspective**
+#### Other examples and interpretation on designing for others / shifts of perspective
 
 In interpreting data there were other examples of pair partners and peers either commenting on or suggesting to others that they should imagining others user experience to suggest game design alterations.
 
@@ -1232,7 +1320,7 @@ When Toby moves to Bertie's game he playtests it and then looks at the code. He 
 
 Exchanges like this allow the propagation of GDPs. The process of playing a game of another and sharing your appreciation of it invites participants to add new patterns to their own game. In this example, the process is very direct with the one asking another to help them directly. It is very likely that Bertie has noticed Toby helping others add levels to their games and thus this may help him to feel empowered to do the same. The propagation here is emerges from and is completed entirely through peer activity. A different and more common pattern of propagation was that participants notice and comment on a game element or pattern during during playtesting, and then to use supporting resources or facilitator help to implement it. A less frequent pattern involved participants' diligent and deliberate use of supporting resources to identify and implement features without peer influence. Typical examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
 
-**New GDPs emerged from existing patterns through peer activity during playtesting**
+#### New GDPs emerged from existing patterns through peer activity during playtesting
 
 In addition to the propagation of main game design patterns, sub patterns and related design concepts emerged organically from the community. The concept of safe zone in the game of Pearl and Clive arrived as a direct result of after adding a moving enemies GDP, the extensive use of that pattern dominates the game challenge to such an extent that it is essential for players to quickly identify and use 'safe zones'.
 DEVELOP
@@ -1254,11 +1342,16 @@ While Ed has only just been introduced to the ability to "cramp". He is happy an
 
 **GDPs allow participants to share and explore their home and professional funds of knowledge and practices in the emerging learning community.**
 
-In the last chapter outlined ways in which participants could to bring their own interests into the game making process via the use of graphical assets (and game narratives).
 
-In some of the examples above we saw Molly and Nadine do this.
+#### Family funds of knowledge
 
-They bring some of their home funds of knowledge into the emerging learning community.
+In the last chapter outlined ways in which participants could to create their own graphical and audio assets.
+
+This process facilitated participants to bring their own interests into the game making process. As outlined in literature [Gee / Ito & Scratch community] , graphical assets along with  via the use of the creation of game narratives), are motivating and sustain engagement.
+While not contributing anything new in this area to the research, these finding support existing research, and this aspect remains a vital part of inclusive game making.
+
+In some of the examples above we saw Molly and Nadine showing identification with graphical making process and the process of bringing it the game.  
+Beyond there internal family interaction, they share this artistic flair or attention to detail which is likely to be a part of their home funds of knowledge into the emerging learning community.
 
 NOTE ALSO NARRATIVE OF
 
@@ -1266,73 +1359,16 @@ In the above example, Bertie comments on Toby's game which has a dominant game e
 
 GET SOME OTHER  EXAMPLES HERE IF POSSIBLE - LINK TO STATS - AND NEXT CHAPTER.
 
-A wider exploration of use of FOK in the programme reated to art and narrative is explored in chapter six.
+A wider exploration of use of FOK in the programme related to art and narrative is explored in chapter six.
+
+
+#### Professional funds of knowledge
+
+As per toby and dave - but see above - but any other examples?
 
 
 <!-- In addition to the previous chapters observations....
 ADD IF RELEVANT - research on funds of knowledge motives or benefits of this behaviour may include: ... -->
-
-#### Problem solving practices as a fund of knowledge (but not really GDP)
-
-- CONSIDER REVISING A LOT - AND LINK THIS TO THE EXTRACT ABOUT - EXTERNAL DOCUMENTATION WHICH FOLLOWS ON.
-
-In the following example home funds of knowledge are utilised not only in terms of home experiences of games but also in terms of design and problem solving practices. Dave  and Toby are working closely as a pair.
-
-Dave  invites thinking outside of the constraints of the suggested design early in this first session. The following interaction shows a rich interchange where the parent is trying to draw on the game playing experiences to promote innovation in the design of the existing template.
-
-<!--
-The following exchange shows how the use of GDPs help participants navigate the professional practice of forking a codebase and the exploration of developer resources. Technically, he has the courage to divert from the existing game paradigm from platform to maze. Practically it brings up issues as many of the dominant game design patterns are different. Thus the first one they identify that of enemy following is not present in the current menu of choices.
--->
-
-THIS IS STRONGLY LINKED WITH IDEATION - PERHAPS MOVE THERE.
-
-    Dave: Have you thought about pushing it a bit further and have a different style of game?
-    Toby: What do you mean?
-    Dave: Well the previous style of game was a platform (makes shape with hands) game wasn’t it? You went along and there was gravity pushing down (points down). There are other types of games aren’t there?
-    Toby: Pause. I don’t know what to do thought.
-    Dave: Well quite but what other games are there? again
-
-Toby adopts with this suggestion readily once he understands Da's suggestion. He then approaches Mick with a suggestion.
-
-    Toby: You could have a game where every 15 seconds 10 seconds you could add and enemy to such and such a random number between such and such (holds up hands to indicate parameters). You could block it somewhere.
-    Dave: So instead of.. instead of the world… the world being sideways. We could have the world being looked down on. (reindicates the change of perspective)
-    Toby: Hmm. How should I do this then?
-    Dave: That’s a good question. Shall we ask Mick to see if that would mess things up or not?
-    Toby: Mick
-    Mick: Hi ya.
-    Toby: Erm. Thinking about what game to do . I was thinking can we make like a Pac-man game kind of thing (indicates movement of character with hands)
-    Dave: If we had an on the top game rather than a platform game
-    Mick: I think it could work. You could kind of adapt that game by, kind of, removing gravity.
-    Dave: and see what happens?
-    Mick: and see what happens.
-
-
-LOA FROM COMPUTING PEDAGOGY RELEVANT HERE - WHERE ELSE ARE THEY EXPLORED?
-
-Dave  expresses his desire to for the pair to try something new by implementing a pattern not in the menu of GDPs provided. Their new choice is a change of perspective which involves a new game pattern of a new movement game mechanic. The specific proposal is to remove a jumping game mechanic and using a 2D top down movement mechanic used in maze and adventure games (e.g. Pac-man and Zelda games).
-
-Toby takes on the role of checking these change of direction with me. He uses a concrete example of a game to indicate the shift of genre and games space structure implied, saying "I was thinking can we make like a pacman game kind of thing". Dave  is more explicit naming the shift of perspective and genre. Mick takes this to a concrete code level by making reference to a key change of code that would be involved.
-
-The decision to divert from the existing meny of GDPs and genre can be triangulated with interview data from Dave  on the motivation behind his involvement in volunteering at Coder Dojos.
-
-PERHAPS DROP THIS QUOTE OR WORK OUT HOW TO BETTER INTEGRATE IT?
-
-    Honestly, it's just it's just my hobby and I love it is the main reason. In fact, it's probably the only reason. If I can, if I can persuade / cajole / trick my kids into being involved at the same time, then that's even better. Personally, I think that's about it. I've always been interested in computers. I love, I love, I love programming. I'm no good at pencils and pens drawing or anything like that. But writing software is the closest I get to a creative outlet. So I just love doing that.
-
-Given this additional perspective, I interpret Da's influence to divert as a way of embracing a creative challenge and bringing his child along for the ride. However, Dave  is also aware of potential challenges of straying too far from the template. He does not want to "mess things up".
-
-A BIT ON FORKING ISSUES - TO EXPLORE LATER MOVE BELOW TO DISCUSSION?
-
-<!-- This tension has a parallel to a professional practice of "forking" code-bases in open-source code communities. The practice of forking can involve taking a code base in a new direction and the benefits of adaption may be out-weighed by disadvantages including the friction involved in splitting an existing community and duplication of effort. The parent checking with a Mick a guiding community member about the advantages and disadvantages of a major fork in the code structure mirrors this professional tension. -->
-
-This example shows that while the use of GDP can help support choices within a frame, there is also the ability to break out of that restriction and keep some of the benefits of the shared code base.
-
-<!-- My own positive response to their suggestion was driven partly from knowledge of Da's cultural background a both a professional coding and a volunteer supporting children's coding programmes. While simultaneously checking with other groups that they use the starting template as a base, to avoid overload as previously discussed in design decisions, I encourage this pair to see what happens as a potential learning opportunity. I am conscious that the change of movement may open up different possibilities for new game patterns that this pair may be able to solve. This outweighs the possibility that the pair will get bogged down in complex code problems or structures which may be beyond the capacity of the young person. After all even if they encounter father must solve, the apprentice does not need to understand everything in order to benefit from observing the master at work. -->
-
-<!-- **Summary / Other examples:**
-Thus in this xample the family bring their knowledge of game play patterns and genre conventions and more broadly experience and a perspecive of coding as a creative challenge to the activity.
-
-Other families? examples with GDDP. -->
 
 
 <!--
