--- a/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
@@ -1,4 +1,4 @@
--   [Research Questions - Feb 2023](#research-questions---feb-2023)
+-   [Research Questions - Feb 2024](#research-questions---feb-2024)
 -   [Notes to restructure](#notes-to-restructure)
     -   [Chapter outline](#chapter-outline)
     -   [On GDP as a germ-cell and unit of analysis - and chapter
@@ -18,6 +18,9 @@
         tutorials](#gdps-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials)
     -   [GDPs used to scaffold ideation
         processes](#gdps-used-to-scaffold-ideation-processes)
+        -   [Problem solving practices as a fund of knowledge (but not
+            really
+            GDP)](#problem-solving-practices-as-a-fund-of-knowledge-but-not-really-gdp)
         -   [Paper prototyping mapping visual
             matrix](#paper-prototyping-mapping-visual-matrix)
         -   [GDPs as used by participants in their prioritisation in the
@@ -43,6 +46,14 @@
 -   [Cultural Dimension](#cultural-dimension)
     -   [The role of GDPs to facilitate learners to design for
         others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
+        -   [Referring to GDPs (especially during playtesting) can help
+            scaffold the process of imagining the end user
+            experiences.](#referring-to-gdps-especially-during-playtesting-can-help-scaffold-the-process-of-imagining-the-end-user-experiences.)
+        -   [GDPs, the scale/nature of project goals & designing for
+            others](#gdps-the-scalenature-of-project-goals-designing-for-others)
+        -   [Other examples and interpretation on designing for others /
+            shifts of
+            perspective](#other-examples-and-interpretation-on-designing-for-others-shifts-of-perspective)
     -   [Role of playtesting and feedback and
         GDPs](#role-of-playtesting-and-feedback-and-gdps)
         -   [GDP concepts and language used in informal feedback for
@@ -50,11 +61,14 @@
             games](#gdp-concepts-and-language-used-in-informal-feedback-for-peers-to-influence-modification-of-games)
         -   [The propagation of use of GDPs through
             playtesting](#the-propagation-of-use-of-gdps-through-playtesting)
+        -   [New GDPs emerged from existing patterns through peer
+            activity during
+            playtesting](#new-gdps-emerged-from-existing-patterns-through-peer-activity-during-playtesting)
     -   [GDPs facilitate the use of wider funds of
         knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
-        -   [Problem solving practices as a fund of knowledge (but not
-            really
-            GDP)](#problem-solving-practices-as-a-fund-of-knowledge-but-not-really-gdp)
+        -   [Family funds of knowledge](#family-funds-of-knowledge)
+        -   [Professional funds of
+            knowledge](#professional-funds-of-knowledge)
 -   [Discussion on the use of game design patterns in the 3M learning
     design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
     -   [Discussion on GDPs, emerging processes and learner
