--- a/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-1-5-Gdps2.md_toc.md
@@ -67,17 +67,24 @@
     -   [GDPs facilitate the use of wider funds of
         knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
         -   [Family funds of knowledge](#family-funds-of-knowledge)
-        -   [Professional funds of
-            knowledge](#professional-funds-of-knowledge)
+        -   [Funds of knowledge from professional and enthusiast
+            communities](#funds-of-knowledge-from-professional-and-enthusiast-communities)
 -   [Discussion on the use of game design patterns in the 3M learning
     design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
     -   [Discussion on GDPs, emerging processes and learner
         agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
+        -   [Tensions between facilitating agency and norming
+            practices](#tensions-between-facilitating-agency-and-norming-practices)
+        -   [Discussion on the use of design patterns and pattern
+            catalogues](#discussion-on-the-use-of-design-patterns-and-pattern-catalogues)
+        -   [The freedoms and restrictions of
+            playgrounds](#the-freedoms-and-restrictions-of-playgrounds)
     -   [Game design patterns as a intermediate-level construct to
         facilitate developing coding
         fluency](#game-design-patterns-as-a-intermediate-level-construct-to-facilitate-developing-coding-fluency)
         -   [Potential implications for facilitators and
             researchers](#potential-implications-for-facilitators-and-researchers)
-    -   [Discussion on the use of design patterns and pattern
-        catalogues - MERGE WITH THE SECTION
-        ABOVE](#discussion-on-the-use-of-design-patterns-and-pattern-catalogues---merge-with-the-section-above)
+-   [Chapter Conclusion](#chapter-conclusion)
+    -   [Summary of the pedagogical opportunities of Game Design
+        Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
+    -   [Transition to next chapter](#transition-to-next-chapter)
