--- a/_posts/thesis_chapters/2024-1-5-Gdps2.md
+++ b/_posts/thesis_chapters/2024-1-5-Gdps2.md
@@ -9,7 +9,6 @@ layout: post
 categories: chapter
 title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
-
 -   [Research Questions - Feb 2024](#research-questions---feb-2024)
 -   [Notes to restructure](#notes-to-restructure)
     -   [Chapter outline](#chapter-outline)
@@ -79,20 +78,27 @@ title:  5. The Use of Gameplay Design Patterns "It’s like a project in itself,
     -   [GDPs facilitate the use of wider funds of
         knowledge](#gdps-facilitate-the-use-of-wider-funds-of-knowledge)
         -   [Family funds of knowledge](#family-funds-of-knowledge)
-        -   [Professional funds of
-            knowledge](#professional-funds-of-knowledge)
+        -   [Funds of knowledge from professional and enthusiast
+            communities](#funds-of-knowledge-from-professional-and-enthusiast-communities)
 -   [Discussion on the use of game design patterns in the 3M learning
     design](#discussion-on-the-use-of-game-design-patterns-in-the-3m-learning-design)
     -   [Discussion on GDPs, emerging processes and learner
         agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
+        -   [Tensions between facilitating agency and norming
+            practices](#tensions-between-facilitating-agency-and-norming-practices)
+        -   [Discussion on the use of design patterns and pattern
+            catalogues](#discussion-on-the-use-of-design-patterns-and-pattern-catalogues)
+        -   [The freedoms and restrictions of
+            playgrounds](#the-freedoms-and-restrictions-of-playgrounds)
     -   [Game design patterns as a intermediate-level construct to
         facilitate developing coding
         fluency](#game-design-patterns-as-a-intermediate-level-construct-to-facilitate-developing-coding-fluency)
         -   [Potential implications for facilitators and
             researchers](#potential-implications-for-facilitators-and-researchers)
-    -   [Discussion on the use of design patterns and pattern
-        catalogues - MERGE WITH THE SECTION
-        ABOVE](#discussion-on-the-use-of-design-patterns-and-pattern-catalogues---merge-with-the-section-above)
+-   [Chapter Conclusion](#chapter-conclusion)
+    -   [Summary of the pedagogical opportunities of Game Design
+        Patterns](#summary-of-the-pedagogical-opportunities-of-game-design-patterns)
+    -   [Transition to next chapter](#transition-to-next-chapter)
 
 
 ## Research Questions - Feb 2024
@@ -193,10 +199,6 @@ tie in conceptts of
 - leading activity
 - repeated activity / iteration
 - rising to the concrete - ie different forms of activity.  -->
-
-
-
-
 
 
 MOVED EARLIER HERE - Check it fits? In the literature review and methodology chapter we examined different interpretations of agency used by researchers using activity theory [@hopwood_agency_2022]. In interpreting the results of this chapter it is of value to explore Sannino's concept of transformative agency by double stimulation (TADS). This concept of agency is of particular value for this study as it acknowledges both the transformative role of the learner to the learning environment in a way which reflects the mutual development of this design. Thus the role of GDPS both as a tool introduced by myself as the facilitator, and their adopted use by participants will be examined here.
@@ -1362,14 +1364,16 @@ GET SOME OTHER  EXAMPLES HERE IF POSSIBLE - LINK TO STATS - AND NEXT CHAPTER.
 A wider exploration of use of FOK in the programme related to art and narrative is explored in chapter six.
 
 
-#### Professional funds of knowledge
+#### Funds of knowledge from professional and enthusiast communities
 
-As per toby and dave - but see above - but any other examples?
+This aspect is addressed in the next chapter in part. (or should be)
 
+Dave helps Toby access professional documentation, and debugging processes?
+
+My experience as a facilitator. From Mozilla, from being an enthusiast for messing around for learning and fun.
 
 <!-- In addition to the previous chapters observations....
 ADD IF RELEVANT - research on funds of knowledge motives or benefits of this behaviour may include: ... -->
-
 
 <!--
 Article on intangibility of game feel.
@@ -1395,7 +1399,7 @@ NOTE - JUST BULLET POINTS FOR NOW  - RELATED CLOSELY TO THE USE OF GDPS - AS THI
  <!-- In this final section I continue to explore emerging thoughts on learner agency in my design through the lens of existing research. The theme of conceptions of learner agency in this practice will be expanded upon in the following discussion chapter. -->
 
 
-**Tensions between facilitating agency and norming practices**
+#### Tensions between facilitating agency and norming practices
 
 This chapter has explored the use of game design patterns by participants to aid the development of their game making practices. Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency.
 
@@ -1403,7 +1407,28 @@ This chapter has explored the use of game design patterns by participants to aid
 
 However as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective. The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
 
-**The freedoms and restrictions of playgrounds**
+
+#### Discussion on the use of design patterns and pattern catalogues
+
+The process of creating a learning design where students were able to choose from a curated set of game design patterns is covered in the design chapter of this thesis. In this section the response of users is explored in relation to other research on this areas.
+
+The concept of a restricted activity is outlined in varied educational concepts including Bruner's reducing degrees of freedom [@wood_role_1976].
+
+HOW MUCH TO MOVE TO LIT REVIEW
+In a design education intervention working with 11-12 year olds Eriksson and colleagues [@eriksson_using_2019] used a collection of curated patterns to prompt learners to analyse and then propose changes to an existing collaborative game called Stringforce. It is useful to compare the supports and approach of Eriksson's Stringforce study with that of the 3M intervention of this study.
+
+The overall goal of the analysis of GDPs also differ, in the 3M study the principle goal is analysis of the use of GDPs by learners to aid their goals in creating their own games. In Eriksson's study the principle goals to is to address the perceived "challenge how to make results from research work related to this within Child-Computer Interaction (CCI) field easily transferable to future CCI research." [@baykal_using_2019]
+The Stringforce study involved learner analysis of games, the ability to change level design via graphical editor and co-design of proposed conceptual changes to existing games. Unlike 3M it did not involved the learners then adding new patterns to games using code.
+
+One similarity is the number of patterns presented to learners. In this iteration of the study 3M presented 20 patterns in the menu of options and the Stringforce study selected 14. Their selection criteria for patterns to include in co-design stages included the following concerns; concrete patterns were favoured over more abstract ones to aid the learner comprehension, patterns chosen matched the learners' capabilities, patterns that were game mechanics were also prioritised as were pattern suggested by the learners.
+
+ <!-- Using a choice of patterns when compared to instructional tutorials (previously explored in methods chapter)  -->
+
+In the 3M design the process of offering a choice of games patterns emerged to counter a previous open design process of which many learners found too challenging. The patterns emerged chiefly in response to requests from learners and partly from facilitator decision making which broadly matched the criteria of the other study. However, in Eriksson's study the authors selected from an extensive, pre-existing pattern collections [@bjork_patterns_2005].
+
+
+
+#### The freedoms and restrictions of playgrounds
 
 While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether.
 
@@ -1477,33 +1502,26 @@ My concern hinged on the potential disorientation of the learner that imposed sh
 
 
 
-### Discussion on the use of design patterns and pattern catalogues - MERGE WITH THE SECTION ABOVE
+## Chapter Conclusion
 
-The process of creating a learning design where students were able to choose from a curated set of game design patterns is covered in the design chapter of this thesis. In this section the response of users is explored in relation to other research on this areas.
-
-Firstly the concept of a restricted activity is well trodden ground outlined in many guidelines including Bruner's reducing degrees of freedom [@wood_role_1976]. In a design education intervention working with 11-12 year olds Eriksson and colleagues [@eriksson_using_2019] used a collection of curated patterns to prompt learners to analyse and then propose changes to an existing collaborative game called Stringforce. It is useful to compare the supports and approach of Eriksson's Stringforce study with that of the 3M intervention of this study.
-
-The overall goal of the analysis of GDPs also differ, in the 3M study the principle goal is analysis of the use of GDPs by learners to aid their goals in creating their own games. In Eriksson's study the principle goals to is to address the perceived "challenge how to make results from research work related to this within Child-Computer Interaction (CCI) field easily transferable to future CCI research." [@baykal_using_2019]
-The Stringforce study involved learner analysis of games, the ability to change level design via graphical editor and co-design of proposed conceptual changes to existing games. Unlike 3M it did not involved the learners then adding new patterns to games using code.
-
-One similarity is the number of patterns presented to learners. In this iteration of the study 3M presented 20 patterns in the menu of options and the Stringforce study selected 14. Their selection criteria for patterns to include in co-design stages included the following concerns; concrete patterns were favoured over more abstract ones to aid the learner comprehension, patterns chosen matched the learners' capabilities, patterns that were game mechanics were also prioritised as were pattern suggested by the learners.
-
- <!-- Using a choice of patterns when compared to instructional tutorials (previously explored in methods chapter)  -->
-
-In the 3M design the process of offering a choice of games patterns emerged to counter a previous open design process of which many learners found too challenging. The patterns emerged chiefly in response to requests from learners and partly from facilitator decision making which broadly matched the criteria of the other study. However, in Eriksson's study the authors selected from an extensive, pre-existing pattern collections [@bjork_patterns_2005].
+### Summary of the pedagogical opportunities of Game Design Patterns
 
 While their results on the advantages and challenges of patterns use focus principally on the perspective of designers (as a way to frame analysis of the activity and shifting interpretations of pattern interpretations), the participant is also shared. I explore some of the opportunities and challenges they surface addressing learner perspective.
 
-GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. Gdps functioned as an _inspirational structured design tool_ Eriksson's study outlines the utility notes teacher observations that GDPs served to stimulate learner imagination and ideation stages. The use of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants is under-explored in this study but builds on related work by two of the authors and is explored in the next part of this chapter.
 
-In 3M the use of GDPs by participants has been outlined in this chapter. A summary is included in Table 6.x
+The use of GDPs by participants has been outlined in this chapter. A summary is included in Table 6.x
 
 SUMMARY TABLE HERE -
+https://docs.google.com/document/d/12EmPhm8E_TE4rimvRdRf2wC5XRwT3EXO4cRZ99RNkTQ/edit
 
-This table will be developed by adding a column "Summary of user actions (use perspective of agency and affordances in processes)"
+This table can be developed by adding a column  use perspective of agency and affordances in processes)"
 
-https://docs.google.com/document/d/1gBAwPkOtvyFJyoJeoK6HmOTyZ6np5fcqn5Jf5_j2ZLA/edit#
+GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. Gdps functioned as an _inspirational structured design tool_ Eriksson's study outlines the utility notes teacher observations that GDPs served to stimulate learner imagination and ideation stages. The use of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants is under-explored in this study but builds on related work by two of the authors and is explored in the next part of this chapter.
 
+
+### Transition to next chapter
+
+This chapter focused on GDPs which while mostly interpersonal, guided participation also touched on emerging cultural elements of the learning community. The next chapter explores culturals aspects in greater detail focusing on a drama process and related research as a lens for analysis.
 
 
 
